--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@types/react": "~18.2.45",
     "expo": "~50.0.14",
+    "expo-blur": "~12.9.2",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "typescript": "^5.3.0",
-    "expo-blur": "~12.9.2"
+    "react-native-animatable": "^1.4.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modalbox": "^2.0.2",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
